# k3hootxyz

./: .env  .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  DEPLOY.md  DESIGN-SYSTEM.md  FIXES_CHANGELOG.md  IMPLEMENTATION_ROADMAP.md  QUICK_START.md  README.md  env.example  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  run-migration.sh  tailwind.config.ts
.orchids/: orchids.json
public/animation/: frames.js  index.html
src/app/: globals.css  layout.tsx  page-old-backup.tsx  page.tsx
src/app/browse/: page.tsx
src/app/create/: page.tsx
src/app/create-quiz/: page.tsx
src/app/join/: page.tsx
src/app/leaderboard/: page.tsx
src/app/play/: page.tsx
src/app/results/: page.tsx
src/components/: AnswerButton.tsx  ClaimButton.tsx  CreateQuizForm.tsx  ErrorBoundary.tsx  KahootAnswerButton.tsx  QuizList.tsx  SimpleQuizCard.tsx  WalletButton.tsx
src/contexts/: GameContext.tsx  WalletContextProvider.tsx
src/data/: ascii-frames.ts
src/design-system/: index.ts
src/hooks/: useBlockchainCache.ts  useCountAnimation.ts  useKeyboardNavigation.ts  useLeaderboard.ts  useParallax.ts  usePlayFlow.ts  useProgressiveLoad.ts  useQuizSets.ts  useScrollAnimation.ts  useSimpleQuiz.ts  useTopics.ts
src/idl/: k_3_hoot_program_arcium.json
src/lib/: arcium-client.ts  simple-solana-client.ts  solana-client.ts  solana-connection.ts  supabase-client.ts  supabase-service.ts  supabase.ts
src/program/: lib.rs
src/store/: useAppStore.ts
src/types/: k_3_hoot_program_arcium.ts  multiplayer.ts  quiz.ts
supabase/migrations/: 20240201000000_init.sql
(+112 files in other folders)
