[package]
name = "k3hoot"
version = "0.1.0"
description = "A Web3 Quiz Platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "k3hoot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-program = "1.16.0" 